# yo

./: .gitignore  Cargo.toml  LICENSE  README.md  config.md  yo  yo2
binaries/Linux/: yo
binaries/Mac-Apple-Silicon/: yo
binaries/Mac-Intel/: yo
src/: main.rs
src/commands/: init.rs  mod.rs
src/commands/base/: init.rs  mod.rs  work_on.rs
src/commands/flutter/: build.rs  clean.rs  config.rs  flutter_project.rs  get.rs  mod.rs  scan.rs  test.rs
src/commands/flutter/helper/: flutter_project.rs  mod.rs
src/commands/scripts/: yocd
src/modules/: file.rs  mod.rs  project.rs  strings_helper.rs
src/resources/: strings.rs
src/structures/: args.rs  config.rs  error.rs  mod.rs  yo_config.rs
src/utils/: print.rs
