[package]
name = "yo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# CLI argument parser
clap = { version = "4.2.7", features = ["derive"] }

# Print in color
colored = "2.0.0"

# Program exit codes
exitcode = "1.1.2"

# Open command
open = "4.0.1"

# Serialization/Deserialization
serde_json = "1.0.94"
serde = {version = "1.0.158", features = ["derive"]}

# Error Handling
thiserror = "1.0.40"

# For user's home directory
home = "0.5.5"

xshell = "0.2.3"
